--- a/force-app/main/default/aura/ViewPatientsReferred/ViewPatientsReferred.css
+++ b/force-app/main/default/aura/ViewPatientsReferred/ViewPatientsReferred.css
@@ -13,13 +13,36 @@
 .THIS .fp-filters-container{
     width: 100%;
 }
-
-.THIS .fp-ss-filter-container{
+/*.THIS .rrs-container:first-child{
+     max-width: 100px !important;
+ }
+.THIS .rrs-container:nth-child(2){
+    max-width: 120px !important;
+}
+@media (max-width: 341px)  {
+    .THIS .rrs-container:first-child{
+        max-width: 150px !important;
+    }
+    .THIS .rrs-container:nth-child(2){
+        max-width: 150px !important;
+    }
+}*/
+.THIS .fp-ss-filter-container {
     max-width: 120px;
 }
 
-@media (max-width: 341px)  {
-    .THIS .fp-ss-filter-container{
-        max-width: 150px;
+.THIS .fp-study-filter-container {
+    max-width: 100px !important;
+}
+
+@media (max-width: 341px) {
+    .THIS .fp-ss-filter-container {
+        min-width: 150px;
+    }
+
+    .THIS .fp-study-filter-container {
+        min-width: 150px;
     }
 }
+
+
