--- a/force-app/main/default/aura/ReferralProfile/ReferralProfile.cmp
+++ b/force-app/main/default/aura/ReferralProfile/ReferralProfile.cmp
@@ -145,8 +145,11 @@
                             {!$Label.c.PG_RP_L_Information_incorrect + ' '}<c:RRLink page="help?tab=problem" class="text">{!$Label.c.PG_AS_T2_Link_Contact_IQVIA}</c:RRLink>.
                         </div> -->
                         <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_3-of-12 rp-please-contact">
-                            <c:Popup aura:id="popup" title="Edit Patient Information" showModal="{!v.isShowPopup}" size="small">
-                                <c:AddPatientByPI isEditMode="true" participant="{!v.participantRecord}" pe="{!v.peRecord}" isAllRequiredCompleted="{!v.fieldsComplete}"/>
+                            <c:Popup aura:id="popup" title="{!$Label.c.PG_EPP_Header}" showModal="{!v.isShowPopup}" size="small">
+                                <aura:if isTrue="{!v.isShowPopup}">
+                                    <c:AddPatientByPI isEditMode="true" participant="{!v.participantRecord}" pe="{!v.peRecord}" isAllRequiredCompleted="{!v.fieldsComplete}"/>
+
+                                </aura:if>
                                 <aura:set attribute="footerButtons">
                                     <button class="apollo-btn primary" disabled="{!!v.fieldsComplete}" onclick="{!c.updateParticipant}">Save Changes</button>
                                 </aura:set>
