--- a/force-app/main/default/aura/VisitResultsDashboardCard/VisitResultsDashboardCard.css
+++ b/force-app/main/default/aura/VisitResultsDashboardCard/VisitResultsDashboardCard.css
@@ -13,7 +13,7 @@
 .THIS .visit-results-body {
     border: 1px solid #d9d9d9;
     border-radius: 5px;
-    min-height: 195px;
+    min-height: 200px;
     box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.15);
 }
 
@@ -65,6 +65,27 @@
     width: 100%;
     line-height: 22px;
     height: 22px;
+    margin-top: 5px;
+}
+
+.THIS .visit-results-panel-disclaimer {
+    color: #595959;
+    font-family: "Proxima Nova";
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 14px;
+    text-align: center;
+    padding-bottom: 15px;
+}
+
+.THIS .visit-result-item-measurement {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-family: "Proxima Nova";
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 22px;
     margin-top: 5px;
 }
 
