--- a/force-app/main/default/aura/VisitResultsItem/VisitResultsItem.cmp
+++ b/force-app/main/default/aura/VisitResultsItem/VisitResultsItem.cmp
@@ -8,6 +8,7 @@
     <aura:attribute name="wrapper" type="VisitResultsService.VisitResultWrapper"/>
     <aura:attribute name="isVitals" type="Boolean" default="false"/>
 
+    <aura:attribute name="expectedRange" type="String" default="-" access="private"/>
     <aura:attribute name="showExpectedRange" type="Boolean" default="true" access="private"/>
 
     <!-- HANDLERS -->
@@ -21,14 +22,14 @@
             <div class="visit-result-name">
                 {!v.wrapper.name}
                 <br />
-                <div class="visit-result-measurement">{!v.wrapper.measurement}</div>
+                <div class="{!v.isVitals ? 'visit-result-measurement' : 'hidden'}">{!v.wrapper.measurement}</div>
             </div>
         </div>
         <div class="visit-result-slider">
             <c:RRSlider value="{!v.wrapper.value}" minValue="{!v.wrapper.minValue}" maxValue="{!v.wrapper.maxValue}"
                         showFilledTrack="{!!v.isVitals}"/>
             <div class="{!v.showExpectedRange ? 'visit-result-range' : 'hidden'}">
-                {!$Label.c.Visit_Results_Tab_Expected_Range + ': ' + v.wrapper.minValue + '-' + v.wrapper.maxValue + ' ' + v.wrapper.measurement}
+                {!$Label.c.Visit_Results_Tab_Expected_Range + ': ' + v.expectedRange}
             </div>
         </div>
         <lightning:helptext content="{!v.wrapper.description}" class="visit-result-item-description"/>
