--- a/force-app/main/default/aura/VisitResultsPanel/VisitResultsPanel.css
+++ b/force-app/main/default/aura/VisitResultsPanel/VisitResultsPanel.css
@@ -31,3 +31,12 @@
         margin-right: 10px;
         margin-bottom: 15px;
 }
+
+.THIS .visit-result-panel-disclaimer {
+    color: #595959;
+    font-family: "Proxima Nova";
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 14px;
+    text-align: center;
+}
