--- a/force-app/main/default/aura/ParticipantCardFields/ParticipantCardFields.cmp
+++ b/force-app/main/default/aura/ParticipantCardFields/ParticipantCardFields.cmp
@@ -32,7 +32,7 @@
                     <div class="value">{!v.pe.Study_Site__r.Name}</div>
                 </div>
                 <div class="vpi-field">
-                    <div class="label">{!$Label.c.PE_Referring_provider}</div>
+                    <div class="label">{!$Label.c.PE_Source}</div>
                     <aura:if isTrue="{!!empty(v.pe.HCP__c)}">
                     <div class="value">{!v.pe.HCP__r.HCP_Contact__r.Name}</div>
                         <aura:set attribute="else">
