--- a/force-app/main/default/aura/AddPatientByPI/AddPatientByPI.cmp
+++ b/force-app/main/default/aura/AddPatientByPI/AddPatientByPI.cmp
@@ -20,11 +20,13 @@
     <aura:attribute name="screeningRequired" type="Boolean" default="false"/>
     <aura:attribute name="initialized" type="Boolean" default="false"/>
     <aura:attribute name="isEditMode" type="Boolean" default="false"/>
+    <aura:attribute name="entrollmentSuccess" type="Boolean" default="false" />
 
     <!-- handlers: -->
     <aura:handler event="c:EventCommunityInitialized" action="{!c.doInit}"/>
     <aura:handler name="change" value="{!v.participant.Gender__c}" action="{!c.doCheckFields}"/>
     <aura:handler name="change" value="{!v.participant.Mailing_State_Code__c}" action="{!c.doCheckFields}"/>
+    <aura:handler name="change" value="{!v.participant.Phone_Type__c}" action="{!c.doCheckFields}"/>
     <aura:handler name="change" value="{!v.pe.Participant_Status__c}" action="{!c.doCheckFields}"/>
     <aura:handler name="change" value="{!v.pe.Referred_By__c}" action="{!c.doCheckFields}"/>
     <aura:handler name="change" value="{!v.participant.Mailing_Country_Code__c}" action="{!c.doCountryCodeChanged}"/>
@@ -158,7 +160,7 @@
                                 </aura:if>
                                 {!$Label.c.PG_AP_F_Screening_Subject_Id}
                             </div>
-                            <lightning:input type="text" value="{!v.pe.Screening_ID__c}" onblur="{!c.doCheckFields}"
+                            <lightning:input aura:id ="screeningId" type="text" value="{!v.pe.Screening_ID__c}" onblur="{!c.doCheckFields}"
                                              required="{!v.screeningRequired}"/>
                         </div>
                         <div class="rr-form-element slds-col">
