--- a/force-app/main/default/aura/ReferralProfile/ReferralProfile.cmp
+++ b/force-app/main/default/aura/ReferralProfile/ReferralProfile.cmp
@@ -156,7 +156,7 @@
                         <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_3-of-12 rp-please-contact">
                             <c:Popup aura:id="popup" title="{!$Label.c.PG_EPP_Header}" showModal="{!v.isShowPopup}" size="small" showScroll="true">
                                 <aura:if isTrue="{!v.isShowPopup}">
-                                    <c:AddPatientByPI isEditMode="true" participant="{!v.participantRecord}" pe="{!v.peRecord}" isAllRequiredCompleted="{!v.fieldsComplete}" entrollmentSuccess="{!v.entrollmentSuccess}"/>
+                                    <c:AddPatientByPI isEditMode="true" source="{!v.enrollment.Referral_Source__c}" participant="{!v.participantRecord}" pe="{!v.peRecord}" isAllRequiredCompleted="{!v.fieldsComplete}" entrollmentSuccess="{!v.entrollmentSuccess}"/>
 
                                 </aura:if>
                                 <aura:set attribute="footerButtons">
