--- a/force-app/main/default/aura/PPStudyWorkspace/PPStudyWorkspace.cmp
+++ b/force-app/main/default/aura/PPStudyWorkspace/PPStudyWorkspace.cmp
@@ -199,7 +199,9 @@
                     </aura:if>
 
                     <aura:if isTrue="{!v.currentTab == 'tab-visits'}">
-                        <c:StudyVisits visitMode="{!v.visitMode}"/>
+                        <c:RRInjector componentName="StudyVisits">
+                            <c:RRInjectorAttribute name="visitMode" value="{!v.visitMode}" isReference="true"/>
+                        </c:RRInjector>
                     </aura:if>
 
                     <aura:if isTrue="{!v.currentTab == 'tab-tasks'}">
@@ -207,11 +209,15 @@
                     </aura:if>
 
                     <aura:if isTrue="{!v.currentTab == 'tab-resources'}">
-                        <c:ResourceContainer resourceMode="{!v.resourceMode}"/>
+                        <c:RRInjector componentName="ResourceContainer">
+                            <c:RRInjectorAttribute name="resourceMode" value="{!v.resourceMode}" isReference="true"/>
+                        </c:RRInjector>
                     </aura:if>
 
                     <aura:if isTrue="{!v.currentTab == 'tab-lab-results'}">
-                        <c:VisitResultsContainer labResultsMode="{!v.labResultsMode}"/>
+                        <c:RRInjector componentName="VisitResultsContainer">
+                            <c:RRInjectorAttribute name="labResultsMode" value="{!v.labResultsMode}" isReference="true"/>
+                        </c:RRInjector>
                     </aura:if>
                 </div>
             </div>
