--- a/force-app/main/default/aura/VisitResultsItem/VisitResultsItem.cmp
+++ b/force-app/main/default/aura/VisitResultsItem/VisitResultsItem.cmp
@@ -26,8 +26,12 @@
             </div>
         </div>
         <div class="visit-result-slider">
-            <c:RRSlider value="{!v.wrapper.value}" minValue="{!v.wrapper.minValue}" maxValue="{!v.wrapper.maxValue}"
-                        showFilledTrack="{!!v.isVitals}"/>
+            <c:RRInjector componentName="RRSlider">
+                <c:RRInjectorAttribute name="value" value="{!v.wrapper.value}" isReference="true"/>
+                <c:RRInjectorAttribute name="minValue" value="{!v.wrapper.minValue}" isReference="true"/>
+                <c:RRInjectorAttribute name="maxValue" value="{!v.wrapper.maxValue}" isReference="true"/>
+                <c:RRInjectorAttribute name="showFilledTrack" value="{!!v.isVitals}" isReference="true"/>
+            </c:RRInjector>
             <div class="{!v.showExpectedRange ? 'visit-result-range' : 'hidden'}">
                 {!$Label.c.Visit_Results_Tab_Expected_Range + ': ' + v.expectedRange}
             </div>
