--- a/force-app/main/default/aura/VisitResultsItem/VisitResultsItem.css
+++ b/force-app/main/default/aura/VisitResultsItem/VisitResultsItem.css
@@ -55,9 +55,11 @@
 }
 
 .THIS .visit-result-measurement {
-    white-space: nowrap;
+    /*white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis;
+    text-overflow: ellipsis;*/
+    overflow-wrap: break-word;
+    width: 100%;
     font-weight: 700;
 }
 
